--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="modal"></div>
-    <div id="root"></div>
+    <div id="root" class="bg-slate-100 dark:bg-dark-black scroll-smoothf"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
